package it.polimi.ingsw.board;

import java.util.Queue;

public class Cards implements iCards {

	private Queue<iCard> cards;

	@Override
	public iCard pullCard() {

		return null; // TODO
	}
}
