package it.polimi.ingsw.model.adventure_cards;

import java.util.function.BiConsumer;
import java.util.function.BiPredicate;

public class CardEffect implements iCardEffect {
    private BiPredicate<--TODO> test();
    private BiConsumer<--TODO> on_satisty();
    private BiConsumer<--TODO> on_unsatisfy();
    public BiConsumer<--TODO> apply(iSpaceShip ship);
}
