package it.polimi.ingsw.model.components.visitors;

public interface iVisitable {

	void check(iVisitor v);

}
